--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
             color: white;
             cursor: pointer;
         }
+
+        footer {
+            text-align: center;
+        }
     </style>
 </head>
 
