--- a/restaurant_menu.html
+++ b/restaurant_menu.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <title>Jollibee Menu</title>
     <style>
         * {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family:Verdana, Geneva, Tahoma, sans-serif
         }
 
         header {
             background-color: crimson;
-            color: white;
             padding: 16px;
+            color: white;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
-
-        header img,
-        header h1,
-        header nav {
+        
+        header img, header h1, header nav {
             display: inline-block;
         }
 
@@ -44,7 +40,7 @@
 
         nav ul li {
             display: inline-block;
-            padding: 0 16px;
+            padding: 0px 16px;
             font-weight: 700;
         }
 
@@ -58,10 +54,14 @@
             text-align: center;
         }
 
-        h2 {
-            padding: 16px;
+        #menu-section {
+            padding: 32px;
         }
 
+        main h2{
+            padding: 16px;
+        }
+        
         article {
             border: 2px solid black;
             margin: 16px;
@@ -74,7 +74,7 @@
             overflow: hidden;
         }
 
-        article h3 {
+        article h3{
             margin: 8px;
         }
 
@@ -99,9 +99,13 @@
             color: white;
             cursor: pointer;
         }
+
+        footer {
+            text-align: center;
+        }
+
     </style>
 </head>
-
 <body>
     <header>
         <img src="./assets/jollibee-logo.png" alt="Jollibee Pinoy Summer Specials" id="header-img">
@@ -120,20 +124,17 @@
             <article>
                 <img src="./assets/burger-steak.png" alt="Burger Steak">
                 <h3>Burger Steak</h3>
-                <p>1 piece of beef patty with flavorful mushroom gravy, topped with mushroom slices. Served with steamed
-                    rice.<br><br><i>₱60.00</i></p>
+                <p>1 piece of beef patty with flavorful mushroom gravy, topped with mushroom slices. Served with steamed rice.<br/><br/><i>₱60.00</i></p>
             </article>
             <article>
                 <img src="./assets/chickenjoy.png" alt="Chickenjoy">
                 <h3>Chickenjoy</h3>
-                <p>Philippines’ best-tasting crispylicious, juicylicious Chickenjoy that is crispy on the outside,
-                    tender and juicy on the inside.<br><br><i>₱82.00</i></p>
+                <p>Philippines’ best-tasting crispylicious, juicylicious Chickenjoy that is crispy on the outside, tender and juicy on the inside.<br/><br/><i>₱82.00</i></p>
             </article>
             <article>
                 <img src="./assets/jolly-spaghetti.png" alt="Jolly Spaghetti">
                 <h3>Jolly Spaghetti</h3>
-                <p>The meatiest, cheesiest and sweet-sarap spaghetti! Freshly prepared noodles topped with Jollibee’s
-                    signature meaty spaghetti sauce, hotdog chunks and creamy grated cheese.<br><br><i>₱60.00</i></p>
+                <p>The meatiest, cheesiest and sweet-sarap spaghetti! Freshly prepared noodles topped with Jollibee’s signature meaty spaghetti sauce, hotdog chunks and creamy grated cheese.<br/><br/><i>₱60.00</i></p>
             </article>
         </section>
         <section id="order-form-section">
@@ -142,18 +143,18 @@
                 <label>Burger Steak: <input type="number" min="0" placeholder="0"></label>
                 <label>Chickenjoy: <input type="number" min="0" placeholder="0"></label>
                 <label>Jolly Spaghetti: <input type="number" min="0" placeholder="0"></label>
-                <label>Sides:<br>
+                <label>Sides:<br/>
                     <input type="radio" name="sides" value="fries"> Jolly Crispy Fries - <i>₱50.00</i>
                     <input type="radio" name="sides" value="soup"> Creamy Macaroni Soup - <i>₱77.00</i>
                     <input type="radio" name="sides" value="rice"> Extra Rice - <i>₱32.00</i>
                 </label>
-                <label>Special Request:<br><textarea rows="7" cols="42" placeholder="Hi there..."></textarea></label>
+                <label>Special Request: <br><textarea rows="7" cols="42" placeholder="Hi there..."></textarea></label>
                 <input type="submit" value="Go To Checkout">
             </form>
         </section>
     </main>
     <footer>
-        <p>Made with love by CptRainy</p>
+        <p>Made with love by CptRainy   </p>
     </footer>
 </body>
 
