--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         * {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: Verdana, Geneva, Tahoma, sans-serif
         }
 
         header {
             background-color: crimson;
-            color: white;
             padding: 16px;
+            color: white;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -44,7 +43,7 @@
 
         nav ul li {
             display: inline-block;
-            padding: 0 16px;
+            padding: 0px 16px;
             font-weight: 700;
         }
 
@@ -58,7 +57,11 @@
             text-align: center;
         }
 
-        h2 {
+        #menu-section {
+            padding: 32px;
+        }
+
+        main h2 {
             padding: 16px;
         }
 
@@ -98,6 +101,10 @@
             background-color: crimson;
             color: white;
             cursor: pointer;
+        }
+
+        footer {
+            text-align: center;
         }
     </style>
 </head>
